@@ -68,3 +68,4 @@ PRINTOUTS_ENABLED = True
 MAX_PARTICIPANT_FILES = 1000
 MAX_PRINT_PAGES = 12
 DISPLAY_QR_CODES = False
+AUTOREGISTER_ENABLED = False
