@@ -11,6 +11,7 @@ oi-bus (0.2.0) UNRELEASED; urgency=medium
   * Add registration by QR codes
   * Add summarized Ansible logs
   * Add participant IDs to Ansible inventory
+  * Add option to disable autoregistration via healthcheck
 
  -- Michał Sidor <michcioperz@asirpa.iscute.ovh>  Mon, 17 Feb 2020 20:16:24 +0100
 
